avoid title/logo overlap

--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -6,6 +6,7 @@ header h1 {
 margin-bottom: 30px;
 margin-top: -60px;
 text-align:center;
+text-indent: 5em;
 }
 .page-header {
 border-bottom: 6px solid black;
